# DeepShield-

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ai_assistant.py  api.py  app.py  batch.json  inference.py  local_env.py  openenv.yaml  pyproject.toml  requirements.txt
env/: environment.py  features.py  graders.py  identity.py  models.py  tasks.py
server/: __init__.py  app.py  models.py  openenv_adapter.py
static/css/: dashboard.css  style.css
static/js/: app.js  dashboard.js
templates/: dashboard.html  index.html
tests/: test_api.py  test_api_openenv.py  test_inference.py
